--- a/sample_saj.tex
+++ b/sample_saj.tex
@@ -10,6 +10,7 @@
 \usepackage{tikz} % for checkmark
 \usepackage{pifont} % for xmark
 \usepackage{amsfonts}
+\usepackage{fancyhdr}
 \usepackage{amssymb}
 \usepackage{amsmath,upgreek}
 \usepackage{titlesec}
@@ -59,8 +60,8 @@ final=true
 
 % Runningtitle
 
-\markboth{\eightrm INSTRUCTIONS FOR AUTHORS} 
-{\eightrm B. ARBUTINA {\lowercase{\eightit{et al.}}}}
+\markboth{\eightrm Momentum Lab Report}{\eightrm B. Arbutina {\lowercase{\it et al.}}}
+{\eightrm Piyush Acharya}
 
 \begin{strip}
 
