--- a/main.tex
+++ b/main.tex
@@ -153,6 +153,7 @@ The following table summarizes the data collected from the experiments, includin
     \centering
     \caption{Summary of Experimental Data}
     \label{tab:data}
+    \resizebox{\textwidth}{!}{%
     \begin{tabular}{|c|c|c|c|c|c|c|c|}
         \hline
         Trial & Initial Velocity (cart) & Initial Velocity (textbooks) & Final Velocity (cart) & Time (s) & Mass (kg) & Velocity (m/s) & Momentum (kg$\cdot$m/s) \\ \hline
@@ -161,7 +162,8 @@ The following table summarizes the data collected from the experiments, includin
         3     & 0.66                   & 0                           & -0.51                 & 0.31     & 1.17      & -0.51         & -0.60 \\ \hline
         4     & 0.26                   & 0                           & -0.17                 & 0.193    & 0.43      & -0.17         & -0.07 \\ \hline
         5     & 0.6                    & 0                           & -0.54                 & 0.25     & 1.26      & -0.54         & -0.68 \\ \hline
-    \end{tabular}
+    \end{tabular}%
+    }
 \end{table}
 
 \section{Analysis \& Error Treatment}
@@ -212,12 +214,4 @@ From the analysis, it can be seen that...
 \clearpage
 \addappheadtotoc 
 \appendixpage 
-
-\section{First appendix}
-
-\lipsum[2]
-
-\section{Second appendix}
-
-\lipsum[1]
 \end{document}
